--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
       <div class="work">
         <img src="assets/images/windmills-1315947-640x480.jpg" alt="Coming soon!">
         
-        <h3>Coming soon!</h3>
+        <h3><a href="https://alijan312.github.io/Psychic-Game/.">Psychic-Game</a></h3>
       </div>
       <div class="work">
         <img src="assets/images/640x480.jpg" alt="Coming soon!">
