linked crystal collector to portfolio and added images

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,14 +26,14 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/windmills-1315947-640x480.jpg" alt="Coming soon!">
+        <img src="assets/images/question.png" alt="Psychic-Game!">
         
         <h3><a href="https://alijan312.github.io/Psychic-Game/.">Psychic-Game</a></h3>
       </div>
       <div class="work">
-        <img src="assets/images/640x480.jpg" alt="Coming soon!">
+        <img src="assets/images/Crystals.jpg" alt="Crystal Collector!">
 
-        <h3>Coming soon!</h3>
+        <h3><a href="https://alijan312.github.io/unit-4-game/">Crystal Collector</a></h3>
       </div>
       <div class="work">
         <img src="assets/images/android_189445-640x480.jpg" alt="Coming soon!">
