--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Alijan Shiraliev</a>
+      <a href="index.html" id="logo">Alijan Shiraliyev</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
