adding Trivia link to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,9 +36,9 @@
         <h3><a href="https://alijan312.github.io/unit-4-game/">Crystal Collector</a></h3>
       </div>
       <div class="work">
-        <img src="assets/images/android_189445-640x480.jpg" alt="Coming soon!">
+        <img src="assets/images/geography.jpg" height="205.5" width="274" alt="Trivia Game">
 
-        <h3>Coming soon!</h3>
+        <h3><a href="https://alijan312.github.io/TriviaGame/">Trivia Game</a></h3>
       </div>
       <div class="work">
         <img src="assets/images/best-bird-print-wallpaper-753.jpg" alt="Coming soon!">
