--- a/portfolio.html
+++ b/portfolio.html
@@ -41,9 +41,9 @@
         <h3><a href="https://alijan312.github.io/TriviaGame/">Trivia Game</a></h3>
       </div>
       <div class="work">
-        <img src="assets/images/best-bird-print-wallpaper-753.jpg" alt="Coming soon!">
+        <img src="assets/images/gify.png" alt="Gify Application">
 
-        <h3>Coming soon!</h3>
+        <h3><a href="https://alijan312.github.io/GiphyAPI/">Gify Application</h3>
       </div>
       <div class="work">
         <img src="assets/images/takumi-640x480.jpg" alt="Coming soon!">
