added link for train schedule app

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,9 +46,9 @@
         <h3><a href="https://alijan312.github.io/GiphyAPI/">Gify Application</h3>
       </div>
       <div class="work">
-        <img src="assets/images/takumi-640x480.jpg" alt="Coming soon!">
+        <img src="assets/images/train.JPG" alt="Train Schedule">
 
-        <h3>Coming soon!</h3>
+        <h3><a href="https://alijan312.github.io/Train-schedule/">Train Schedule</a></h3>
       </div>
 
     </section>
