--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,8 @@
     <div class="container">
       <a href="index.html" id="logo">Alijan Shiraliyev</a>
       <nav>
-        <a href="index.html">About</a>
+        <a href="https://www.linkedin.com/in/alijan-shiraliyev-88416614a/">LinkedIn</a>
+        <a href="https://github.com/alijan312">Github</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
       </nav>
