--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,8 @@
     <div class="container">
       <a href="index.html" id="logo">Alijan Shiraliyev</a>
       <nav>
-        <a href="index.html">About</a>
+        <a href="https://www.linkedin.com/in/alijan-shiraliyev-88416614a/">LinkedIn</a>
+        <a href="https://github.com/alijan312">Github</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
       </nav>
@@ -26,22 +27,17 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/question.png" alt="Psychic-Game!">
+        <img src="assets/images/dramamasks.png" alt="WatchThis!">
         
-        <h3><a href="https://alijan312.github.io/Psychic-Game/.">Psychic-Game</a></h3>
+        <h3><a href="https://mig9tx.github.io/Group_Project_1/">Watch This</a></h3>
       </div>
       <div class="work">
         <img src="assets/images/Crystals.jpg" alt="Crystal Collector!">
 
-        <h3><a href="https://alijan312.github.io/unit-4-game/">Crystal Collector</a></h3>
+        <h3><a href="https://alijan312.github.io/Crystal-Collector/.">Crystal Collector</a></h3>
       </div>
       <div class="work">
-        <img src="assets/images/geography.jpg" height="205.5" width="274" alt="Trivia Game">
-
-        <h3><a href="https://alijan312.github.io/TriviaGame/">Trivia Game</a></h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/gify.png" alt="Gify Application">
+        <img src="assets/images/gify.png" height="210" width="205.5" alt="Gify Application">
 
         <h3><a href="https://alijan312.github.io/GiphyAPI/">Gify Application</h3>
       </div>
