--- a/portfolio.html
+++ b/portfolio.html
@@ -46,6 +46,11 @@
 
         <h3><a href="https://alijan312.github.io/Train-schedule/">Train Schedule</a></h3>
       </div>
+      <div class="work">
+        <img src="assets/images/download.jpeg" height="210" width="205.5" alt="LIRI Bot">
+
+        <h3><a href="https://github.com/alijan312/liri-node-app">LIRI Bot</a></h3>
+      </div>
 
     </section>
 
